# elte_cpp_exams

./: .travis.yml  Array.h  CMakeLists.txt  README.md  amatrix.h  autolist.h  automap.h  bimap.h  if.h  pstring.h  stat.h  state.txt  stque.h  test.bat  test_result.txt
src/aamain/: aamain.cpp
src/admain/: admain.cpp
src/afvmain/: afvmain.cpp
src/almain/: almain.cpp  autolist.h
src/amapmain/: amapmain.cpp
src/ammain/: ammain.cpp
src/arrmain/: array.h  arrmain.cpp
src/as_main/: as_main.cpp
src/asmain/: asmain.cpp
src/bdmmain/: bdmmain.cpp
src/bidirmain/: bidirmain.cpp
src/books/: books.cpp
src/bstrmain/: bstrmain.cpp
src/cistrmain/: cistrmain.cpp
src/clmain/: clmain.cpp
src/cmmain/: cmmain.cpp
src/contmapmain/: contmapmain.cpp
src/csetmain/: csetmain.cpp
src/csmain/: csmain.cpp
src/csummain/: csummain.cpp
src/cvecmain/: cvecmain.cpp
src/cvmain/: cvmain.cpp
src/dirmain/: dirmain.cpp
src/drsmain/: drsmain.cpp
src/equmain/: equmain.cpp
src/fammain/: fammain.cpp
src/fdmain/: fdmain.cpp
src/ffvecmain/: ffvecmain.cpp
src/ffvmain/: ffvmain.cpp
src/filtmapmain/: filtmapmain.cpp
src/fmmapmain/: fmmapmain.cpp
src/fullfvmain/: fullfvmain.cpp
src/fvmain/: fvmain.cpp
src/hashmain/: hashmain.cpp
src/hmapmain/: hmapmain.cpp
src/immain/: immain.cpp
src/invmapmain/: invmapmain.cpp
src/invmmapmain/: invmmapmain.cpp
src/lemain/: lemain.cpp
src/mapumain/: mapumain.cpp
src/match/: match.cpp
src/mlsmain/: mlsmain.cpp
src/mmain/: mmain.cpp
src/mmmapmain/: mmmapmain.cpp
src/mmvmain/: mmvmain.cpp
src/mscvmain/: mscvmain.cpp
src/msetmain/: msetmain.cpp
src/msmain/: msmain.cpp
src/mstmain/: mstmain.cpp
src/multimain/: multimain.cpp
src/mumain/: mumain.cpp
src/n_bag_main/: n_bag_main.cpp
src/oemsetmain/: oemsetmain.cpp
src/pacmain/: pacmain.cpp
src/palgmain/: palgmain.cpp
src/palstrmain/: palstrmain.cpp
src/pcmain/: pcmain.cpp
src/pdmain/: pdmain.cpp
src/pmatchmain/: pmatchmain.cpp
src/pmmain/: pmmain.cpp
src/pqmain/: pqmain.cpp
src/predmsetmain/: predmsetmain.cpp
src/predstackmain/: predstackmain.cpp
src/prmain/: prmain.cpp
src/psmain/: psmain.cpp
src/pstrmain/: pstrmain.cpp
src/pvecmain/: pvecmain.cpp
src/ravmain/: ravmain.cpp
src/rcsmain/: rcsmain.cpp
src/repstrmain/: repstrmain.cpp
(+23 files in other folders)
