project(elte_cpp_exams CXX)

cmake_minimum_required(VERSION 3.1)
enable_testing()
set(CMAKE_CXX_STANDARD 11)

function(add_exam EXAM MARK)
	set(MARK "Your mark is ${MARK}")
	add_executable(${EXAM} src/${EXAM}/${EXAM}.cpp)
	add_test(NAME ${EXAM} COMMAND ${EXAM})
	set_tests_properties(${EXAM} PROPERTIES PASS_REGULAR_EXPRESSION
		${MARK})
endfunction()

#add_exam(aamain)
#add_exam(admain)
#add_exam(aecmain)
#add_exam(afvmain)
add_exam(almain 2)
#add_exam(amapmain 5)
add_exam(ammain 1)
add_exam(arrmain 5)
#add_exam(as_main)
#add_exam(asmain)
#add_exam(bdmmain)
#add_exam(bidirmain)
#add_exam(books)
#add_exam(bstrmain)
#add_exam(cistrmain)
#add_exam(clmain)
#add_exam(cmmain)
#add_exam(contmapmain)
#add_exam(csetmain)
#add_exam(csmain)
#add_exam(csummain)
#add_exam(cvecmain)
#add_exam(cvmain)
#add_exam(dirmain)
#add_exam(drsmain)
#add_exam(equmain)
#add_exam(fammain)
#add_exam(fdmain)
#add_exam(ffvecmain)
#add_exam(ffvmain)
#add_exam(filtmapmain)
#add_exam(fmmapmain)
#add_exam(fullfvmain)
#add_exam(fvmain)
#add_exam(hashmain)
#add_exam(hmapmain)
#add_exam(immain)
#add_exam(invmapmain)
#add_exam(invmmapmain)
#add_exam(lemain)
#add_exam(mapumain)
#add_exam(match)
#add_exam(mlsmain)
#add_exam(mmain)
#add_exam(mmmapmain)
#add_exam(mmvmain)
#add_exam(mscvmain)
#add_exam(msetmain)
#add_exam(msmain)
#add_exam(mstmain)
#add_exam(multimain)
#add_exam(mumain)
#add_exam(n_bag_main)
#add_exam(oemsetmain)
#add_exam(pacmain)
#add_exam(palgmain)
#add_exam(palstrmain)
#add_exam(pcmain)
#add_exam(pdmain)
#add_exam(pmatchmain)
#add_exam(pmmain)
#add_exam(pqmain)
#add_exam(predmsetmain)
#add_exam(predstackmain)
#add_exam(prmain)
#add_exam(psmain)
#add_exam(pstrmain 5)
#add_exam(pvecmain)
#add_exam(ravmain)
#add_exam(rcsmain)
#add_exam(repstrmain)
#add_exam(safevecmain)
#add_exam(sammain)
#add_exam(savmain)
#add_exam(setseqmain)
#add_exam(simain)
#add_exam(slmain)
#add_exam(smmain)
#add_exam(splmain)
add_exam(sqmain 5)
#add_exam(stamain)
#add_exam(statmain)
#add_exam(strmain)
#add_exam(svecmain)
#add_exam(svmain)
#add_exam(tammain)
#add_exam(tmmain)
#add_exam(trammain)
#add_exam(uvmain)
#add_exam(uvmapmain)
#add_exam(vcmvecmain)
#add_exam(vcstrmain)
#add_exam(vcvmain)
#add_exam(vmmain)
#add_exam(vvmain2)
